Modify link active and inactive colours as directed.

--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -42,7 +42,7 @@ $top-nav-box-height: 2.25rem;
   height: $top-nav-box-height;
   padding: 0.25rem 0;
   background: $theme-primary-v3;
-  color: $theme-primary-v8;
+  color: #eee;//$theme-primary-v8;
   display: flex;
   align-content: center;
   font-size: 0.85rem;
