--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -147,14 +147,14 @@
     header {
       > div {
         padding: 0;
-        margin-top: 9rem;
+        margin-top: 10.5rem;
         margin-bottom: 7rem;
         text-align: center;
 
         &:nth-child(2) {
           text-align: center;
           margin: {
-            top: 12rem;
+            top: 10.5rem;
             bottom: 0;
           }
         }
@@ -177,8 +177,11 @@
         top-right-radius: 0;
         bottom-right-radius: 0;
       }
-      display: block !important;
       padding: 1rem 1rem 2rem 1rem;
+
+      &.d-flex {
+        display: block !important;
+      }
 
       &::before {
         left: calc(100% - (1.25rem / 2) - 0.025rem);
@@ -274,6 +277,10 @@
       font-size: 1rem;
       border-bottom: 0.125rem solid $theme-primary-v4;
       padding: 0.5rem 0.75rem;
+    }
+
+    .projects-header {
+      font-size: 2rem;
     }
 
     .work-desc-header {
