--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -24,8 +24,15 @@
       top: -5rem;
       left: -5vw;
       width: 110vw;
-      height: 38.5rem;
-      clip-path: polygon(0 0, 100% 0, 100% 45%, calc(54vw + 9rem) 45%, calc(51vw - 3rem) 100%, 0 100%);
+      height: 38rem;
+      clip-path: polygon(
+        0 0,
+        100% 0,
+        100% 45%,
+        calc(54vw + 9rem) 45%,
+        calc(51vw - 3rem) 100%,
+        0 100%
+      );
       background: linear-gradient(
         to left,
         $theme-primary-v5,
@@ -64,7 +71,12 @@
 
     &::after {
       z-index: 1;
-      background: rgba(109, 65, 17, 0.4);
+      background: linear-gradient(
+        to left,
+        $theme-primary-v5,
+        $theme-primary-v3
+      );
+      opacity: 0.6;
     }
   }
 
@@ -95,6 +107,7 @@
       width: 22rem;
       max-width: 100%;
       text-align: center;
+      // font-style: italic;
     }
 
     @mixin animate($delay) {
@@ -103,11 +116,10 @@
     }
 
     .rider-text {
-      background-color: rgba(109, 65, 17, 0.65);
-      padding: 1rem;
+      padding: 0 0.15rem;
       font-size: 1.15rem;
       width: 100%;
-      color: $theme-primary-v8;
+      color: $theme-primary-v9;
       border-radius: 0.5rem;
       position: absolute;
       left: 0;
@@ -157,7 +169,11 @@
       box-shadow: 0 0.5rem 1.75rem rgba(0, 0, 0, 0.35);
       line-height: 2.15rem;
       border-radius: 1.25rem;
-      background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
+      background: linear-gradient(
+        to left,
+        $theme-primary-v5,
+        $theme-primary-v3
+      );
       color: white;
       padding: 2.5rem;
 
@@ -183,18 +199,22 @@
 
       border-radius: 0.25rem 0.25rem 0 0;
       transition: 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-      background: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2);
+      background: linear-gradient(
+        to left,
+        $theme-primary-v5,
+        $theme-primary-v3
+      );
     }
   }
 
   .projects-link {
     font-size: 1.25rem;
-    border-bottom: 0.125rem solid $theme-primary-v4;
+    border-bottom: 0.125rem solid $theme-primary-v5;
     padding: 0.75rem 1rem;
     display: inline-block;
     text-decoration: none;
     color: $theme-primary-v3;
-    
+
     &.active {
       color: white;
     }
@@ -233,9 +253,9 @@
     box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
     border-radius: 1rem;
     min-height: 16rem;
-    transform: translateY(3rem);
+    transform: translateY(4rem);
     opacity: 0;
-    transition: 0.75s;
+    transition: 0.85s;
     padding-bottom: 1rem;
 
     > * {
@@ -249,7 +269,6 @@
       height: $size;
       width: $size;
       top: -0.75rem;
-      transform: translateY(1200%);
       z-index: 2;
       left: calc(50% - #{$size / 2} - 0.025rem);
       border-color: transparent;
@@ -267,10 +286,6 @@
     &.animate {
       opacity: 1;
       transform: translateY(0);
-
-      &::before {
-        transform: translateY(0);
-      }
     }
   }
 
