--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,13 +1,3 @@
-@mixin before-or-after() {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
-  height: 100%;
-  width: 100%;
-  z-index: 0;
-}
-
 $theme-primary-faint: rgba(157, 113, 65, 0.25);
 $theme-secondary-faint: rgba(120, 120, 120, 0.25);
 
@@ -121,3 +111,40 @@ $success: rgb(27, 136, 27);
 $error: rgb(245, 34, 34);
 $info: rgb(0, 124, 246);
 $white: #fff;
+
+@mixin before-or-after() {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+
+@mixin variant($bg, $opacity1, $opacity2, $color1, $color2) {
+  border: 1px solid $bg;
+  background: transparent;
+  color: $color1;
+  position: relative;
+  overflow: hidden;
+
+  > * {
+    z-index: 1;
+  }
+
+  &::before {
+    @include before-or-after();
+    opacity: $opacity1;
+    background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
+    transition: 0.3s;
+  }
+
+  &:hover {
+    color: $color2;
+
+    &::before {
+      opacity: $opacity2;
+    }
+  }
+}
