--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -102,43 +102,12 @@ a {
       height: 3rem;
     }
 
-    @mixin variant($opacity1, $opacity2, $color1, $color2) {
-      border: 1px solid $bg;
-      background: transparent;
-      color: $color1;
-      position: relative;
-      overflow: hidden;
-
-      > * {
-        z-index: 1;
-      }
-
-      &::before {
-        @include before-or-after();
-        opacity: $opacity1;
-        background: linear-gradient(
-          to left,
-          $theme-primary-v5,
-          $theme-primary-v3
-        );
-        transition: 0.3s;
-      }
-
-      &:hover {
-        color: $color2;
-
-        &::before {
-          opacity: $opacity2;
-        }
-      }
-    }
-
     &.outlined {
-      @include variant(0, 1, $theme-primary-v4, #fff);
+      @include variant($bg, 0, 1, $theme-primary-v4, #fff);
     }
 
     &.contained {
-      @include variant(1, 0, #fff, $theme-primary-v4);
+      @include variant($bg, 1, 0, #fff, $theme-primary-v4);
     }
 
     &:disabled,
@@ -157,11 +126,6 @@ hr {
   background: $theme-primary;
 }
 
-button,
-a {
-  font-size: 1rem;
-}
-
 h1,
 h2,
 h3,
@@ -169,6 +133,46 @@ h4,
 h5,
 h6 {
   margin: 0;
+}
+
+button,
+a {
+  font-size: 1rem;
+}
+
+button.go-up-fab {
+  $size: 3.5rem;
+
+  width: $size;
+  height: $size;
+  position: fixed !important;
+  bottom: 1rem;
+  display: inline-flex;
+  min-width: unset;
+  align-content: center;
+  right: 1rem;
+  color: #111 !important;
+  background-color: transparent !important;
+  border-radius: $size;
+  border: 0.125rem solid #111 !important;
+  transition: 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+
+  &.hide {
+    transform: translateX($size + 2rem);
+  }
+
+  &::before {
+    background: linear-gradient(to right, #000, #333) !important;
+  }
+
+  &:hover {
+    border-width: 0 !important;
+    color: white !important;
+  }
+
+  [class*='Icon'] {
+    font-size: 2.25rem;
+  }
 }
 
 .logo {
