--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,4 +1,4 @@
-$theme-primary-faint: rgba(157, 113, 65, 0.25);
+$theme-primary-faint: rgba(157, 113, 65, 0.5);
 $theme-secondary-faint: rgba(120, 120, 120, 0.25);
 
 // the -v5's are the actual/main/primary colors. Colors above them are the darker variants while those below lighter variants
@@ -112,6 +112,14 @@ $error: rgb(245, 34, 34);
 $info: rgb(0, 124, 246);
 $white: #fff;
 
+@mixin debugger($color: blue) {
+  border: 1px solid $color;
+
+  * {
+    border: 1px solid $color;
+  }
+}
+
 @mixin before-or-after() {
   position: absolute;
   top: 0;
@@ -122,10 +130,18 @@ $white: #fff;
   z-index: 0;
 }
 
-@mixin variant($bg, $opacity1, $opacity2, $color1, $color2) {
-  border: 1px solid $bg;
+@mixin variant(
+  $bg: transparent,
+  $o1: 1,
+  $o2: 0,
+  $c1: white,
+  $c2: $theme-primary-v3,
+  $gbg1: $theme-primary-v5,
+  $gbg2: $theme-primary-v3
+) {
+  border: 0.0625rem solid $bg;
   background: transparent;
-  color: $color1;
+  color: $c1;
   position: relative;
   overflow: hidden;
 
@@ -135,16 +151,16 @@ $white: #fff;
 
   &::before {
     @include before-or-after();
-    opacity: $opacity1;
-    background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
+    opacity: $o1;
+    background: linear-gradient(to left, $gbg1, $gbg2);
     transition: 0.3s;
   }
 
   &:hover {
-    color: $color2;
+    color: $c2;
 
     &::before {
-      opacity: $opacity2;
+      opacity: $o2;
     }
   }
 }
