--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,9 +4,9 @@
 @import 'Nav';
 @import 'Contact';
 @import 'Landing';
-@import 'Footer';
 @import 'Companies';
 @import 'Products';
 @import 'Portfolio';
+@import 'crumbs';
 @import 'responsive';
 @import 'animation';
