--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -200,11 +200,30 @@ $top-nav-box-height: 2.25rem;
     justify-content: center;
     height: 2.75rem;
     margin-left: 2rem;
-    border: 0.1rem solid transparent;
     padding: 1.25rem 1rem;
     min-width: 6rem;
     border-radius: 2rem !important;
     align-self: center;
+
+    &.contained {
+      &::before {
+        transform: unset;
+        border: unset;
+      }
+
+      @include variant(
+        $bg: #000,
+        $c1: white,
+        $c2: #000,
+        $gbg1: #333,
+        $gbg2: #000
+      );
+
+      border: 0.1rem solid transparent;
+      &:hover {
+        border-color: #000;
+      }
+    }
 
     .short-desc {
       display: none;
@@ -214,20 +233,18 @@ $top-nav-box-height: 2.25rem;
       margin-right: 0.15rem;
     }
 
-    &::before,
-    &::after {
-      content: unset;
-    }
-
-    &.active,
-    &:hover {
+    &.active {
       background-color: transparent;
-      border-color: $theme-primary-v8;
+      border-color: $theme-primary-v9;
+
+      &::before {
+        opacity: 0;
+      }
     }
 
     &:hover,
     &:focus {
-      border-color: white;
+      border-color: white !important;
     }
   }
 }
