--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -19,3 +19,14 @@
   filter: none;
   transform: scale(1.1);
 }
+
+.Person-Image-Wrapper{
+  width: 100%;
+  height: 10em !important;
+}
+
+.Person-Image {
+  height: 100% !important;
+  width: 100% !important;
+  object-fit: cover;
+}
