--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -112,19 +112,14 @@
   .hide-mini-nav {
     transform: unset;
 
-    .breadcrumbs-wrapper {
+    .breadcrumbs-container {
       visibility: hidden;
       opacity: 0;
     }
   }
 
-  .breadcrumbs-wrapper {
-    right: 5vw;
-    min-width: 50vw;
-  }
-
   //contact us page responsive styles
-  .Contact {
+  .Contact, .Inquiry {
     padding-top: 13rem;
 
     .map-wrapper,
