--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -12,7 +12,7 @@
   width: 100px;
   filter: grayscale(1);
   background-image: url("/images/portfolio/enugu_logo.jpg");
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .Client-Image:hover {
@@ -20,7 +20,7 @@
   transform: scale(1.1);
 }
 
-.Person-Image-Wrapper{
+.Person-Image-Wrapper {
   width: 100%;
   height: 10em !important;
 }
@@ -29,4 +29,23 @@
   height: 100% !important;
   width: 100% !important;
   object-fit: cover;
+}
+
+.Certificate {
+  width: 100%;
+  height: 40em;
+}
+
+.Certificate-One {
+  background: url("/images/document.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.Certificate-Two {
+  background: url("/images/document.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
