--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -130,14 +130,42 @@ $white: #fff;
   z-index: 0;
 }
 
+@mixin before-or-after-v2(
+  $bg: $theme-primary-v8,
+  $w: 100%,
+  $h: 100%,
+  $br: 0,
+  $tr: 0.35s,
+  $t: 0,
+  $l: 0,
+  $r: 0,
+  $b: 0,
+  $zi: -1,
+  $bs: none
+) {
+  position: absolute;
+  content: ' ';
+  width: $w;
+  height: $h;
+  top: $t;
+  left: $l;
+  right: $r;
+  bottom: $b;
+  z-index: $zi;
+  background: $bg;
+  border-radius: $br;
+  box-shadow: $bs;
+  transition: $tr;
+}
+
 @mixin variant(
   $bg: transparent,
   $o1: 1,
   $o2: 0,
   $c1: white,
   $c2: $theme-primary-v3,
-  $gbg1: $theme-primary-v5,
-  $gbg2: $theme-primary-v3
+  $gbg1: $theme-primary-v4,
+  $gbg2: $theme-primary-v2
 ) {
   border: 0.0625rem solid $bg;
   background: transparent;
