--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import 'Contact';
 @import 'Landing';
 @import 'Companies';
+@import 'News';
 @import 'Products';
 @import 'Portfolio';
 @import 'crumbs';
