--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -1,5 +1,9 @@
 //This is React's C.R.A. default styles. You may want to change and modify this
 
+.App {
+  position: relative;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
