--- a/src/styles/_crumbs.scss
+++ b/src/styles/_crumbs.scss
@@ -42,7 +42,7 @@ button.go-up-fab {
 .Footer-Wrapper-One {
   height: 10rem;
   // background-color: $theme-primary-v5;
-  background: linear-gradient(to left, $theme-primary-v6, $theme-primary-v4);
+  background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
 }
 
 .Footer-Wrapper-Two {
@@ -51,7 +51,7 @@ button.go-up-fab {
   text-align: left;
   font-size: 0.8rem;
   // background-color: $theme-primary-v4;
-  background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
+  background: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2);
 }
 
 .Footer-Image {
@@ -62,7 +62,7 @@ button.go-up-fab {
   .navigator-link {
     display: inline-block;
     max-width: calc(50vw - 1.25rem);
-    color: #333;
+    color: $theme-primary-v5;
     font-weight: bold;
     text-decoration: none;
     padding: 0.75rem;
@@ -71,7 +71,7 @@ button.go-up-fab {
 
     &:hover,
     &:focus {
-      border-color: #777;
+      border-color: $theme-primary-v6;
     }
 
     .page-name.for-next {
@@ -83,7 +83,7 @@ button.go-up-fab {
       align-items: center;
 
       &:last-child {
-        color: $theme-primary-v5;
+        color: $theme-primary-v3;
         font-size: 2rem;
         margin-top: 0.5rem;
       }
