--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -91,6 +91,18 @@
       height: 8rem;
     }
   }
+
+  // News component(s) styles
+
+  .News {
+    .RecentPosts {
+      padding-right: 1.5rem;
+    }
+
+    .Archive {
+      padding-left: 1.5rem;
+    }
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -119,7 +131,8 @@
   }
 
   //contact us page responsive styles
-  .Contact, .Inquiry {
+  .Contact,
+  .Inquiry {
     padding-top: 13rem;
 
     .map-wrapper,
@@ -248,6 +261,36 @@
       font-size: unset;
     }
   }
+
+  // News component(s) styles
+
+  .News {
+    margin-top: 7.5rem;
+
+    .Main {
+      padding-right: 1rem;
+
+      .page-title {
+        font-size: 2.25rem;
+        text-align: center;
+        display: block;
+        margin-top: 3rem;
+        margin-bottom: 12rem;
+
+        &::before,
+        &::after {
+          height: 25rem;
+          clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
+        }
+      }
+    }
+
+    .NewsPost {
+      .text-container {
+        padding-left: 1rem;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 599px) {
@@ -293,16 +336,32 @@
     .navigator-link {
       padding: 0.5rem;
 
-      [class*=Icon] {
+      [class*='Icon'] {
         font-size: 1.1rem;
       }
-  
+
       > * {
         &:last-child {
           font-size: 1.25rem;
           margin-top: 0.25rem;
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  // News component(s) styles
+  .News {
+    .NewsPost {
+      .text-container {
+        padding: 0;
+      }
+    }
+
+    .RecentPosts,
+    .Archive {
+      padding: 1rem;
     }
   }
 }
