--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -177,7 +177,7 @@ a {
 }
 
 .theme-color-text {
-  color: $theme-primary;
+  color: $theme-primary-v4;
 }
 .theme-color-text-lightest {
   color: $theme-primary-v9;
