--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,24 +1,24 @@
-$theme-primary-faint: rgba(175, 120, 63, 0.45);
+$theme-primary-faint: rgba(145, 95, 40, 0.45);
 $theme-secondary-faint: rgba(120, 120, 120, 0.25);
 
 // the -v5's are the actual/main/primary colors. Colors above them are the darker variants while those below lighter variants
 
 // The following commented reference olors need to be updated as (slight) change has been made to actual colors
 
-// $primary-v1: rgb(75, 20, 0);
-// $primary-v2: rgb(100, 45, 0);
-// $primary-v3: rgb(125, 70, 13);
-// $primary-v4: rgb(150, 95, 38);
-// $primary-v5: rgb(175, 120, 63);
-// $primary-v6: rgb(200, 145, 88);
-// $primary-v7: rgb(225, 170, 113);
-// $primary-v8: rgb(250, 195, 138);
-// $primary-v9: rgb(255, 220, 163);
+// $primary-v1: rgb(70, 20, 0);
+// $primary-v2: rgb(95, 45, 0);
+// $primary-v3: rgb(120, 70, 15);
+// $primary-v4: rgb(145, 95, 40);
+// $primary-v5: rgb(170, 120, 65);
+// $primary-v6: rgb(195, 145, 90);
+// $primary-v7: rgb(220, 170, 115);
+// $primary-v8: rgb(245, 195, 140);
+// $primary-v9: rgb(255, 220, 165);
 
-$theme-primary: rgb(175, 120, 63); //supposed gold color
-$prim-r: 175;
+$theme-primary: rgb(170, 120, 65); //supposed gold color
+$prim-r: 170;
 $prim-g: 120;
-$prim-b: 63;
+$prim-b: 65;
 $theme-primary-v1: rgb(
   $prim-r - (25 * 4),
   $prim-g - (25 * 4),
@@ -143,7 +143,8 @@ $white: #fff;
   $r: 0,
   $b: 0,
   $zi: -1,
-  $bs: none
+  $bs: none,
+  $o: 1
 ) {
   position: absolute;
   content: ' ';
@@ -157,6 +158,7 @@ $white: #fff;
   background: $bg;
   border-radius: $br;
   box-shadow: $bs;
+  opacity: $o;
   transition: $tr;
 }
 
