--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -7,6 +7,7 @@
 .Client-Image {
   object-fit: cover;
   border-radius: 100%;
+  background-color: grey;
   background-position: center;
   height: 100px;
   width: 100px;
