Add basic layout of Pipes landing page.

--- a/src/styles/Portfolio.scss
+++ b/src/styles/Portfolio.scss
@@ -139,13 +139,13 @@
       3%,
       30% {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(0);
       }
 
       32%,
       100% {
         opacity: 0;
-        transform: translateY(1rem);
+        transform: translateX(-20rem);
       }
     }
 
