--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -331,6 +331,19 @@
     }
   }
 
+  //Companies style(s)
+  .Overview {
+    .last-section {
+      * {
+        text-align: left !important;
+      }
+
+      .order-1 {
+        order: unset;
+      }
+    }
+  }
+
   //FooterNavigator styles
   .FooterNavigator {
     .navigator-link {
