--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -106,7 +106,7 @@
 }
 
 .contact-form-wrapper {
-  border-radius: 2rem;
+  border-radius: 2.5rem;
   overflow: hidden;
   max-width: 62rem;
   margin: auto;
@@ -115,7 +115,7 @@
 }
 
 .contact-form-col {
-  padding: 3.5rem;
+  padding: 4rem 3.5rem;
   background-color: white;
 }
 
