Mad a few more changes

--- a/src/styles/_crumbs.scss
+++ b/src/styles/_crumbs.scss
@@ -40,7 +40,7 @@ button.go-up-fab {
 }
 
 .Footer-Wrapper-One {
-  height: 10rem;
+  // height: 10rem;
   // background-color: $theme-primary-v5;
   background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
 }
