--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -50,3 +50,31 @@
   background-position: center;
   background-size: contain;
 }
+
+$clients: (
+  "enugu": "/images/clients/enugu.jpeg",
+  "nbp": "/images/clients/nbp.jpeg",
+  "ndphc": "/images/clients/ndphc.jpeg",
+  "nlng": "/images/clients/nlng.jpeg",
+  "shell": "/images/clients/shell.jpeg",
+);
+
+@each $i, $image in $clients {
+  .Client-Image-#{$i} {
+    object-fit: cover;
+    border-radius: 100%;
+    background-color: grey;
+    background-position: center;
+    box-shadow: 0px 0px 7px 5px rgba(0, 0, 0, 0.02);
+    height: 100px;
+    width: 100px;
+    filter: grayscale(1);
+    background-image: url($image);
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .Client-Image-#{$i}:hover {
+    filter: none;
+    transform: scale(1.1);
+  }
+}
