--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -23,7 +23,8 @@
 
 .Person-Image-Wrapper {
   width: 100%;
-  height: 10em !important;
+  height: 15em !important;
+  justify-content: center;
 }
 
 .Person-Image {
